--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,29 @@
   visibility: hidden;
   transition: all 0.3s;
 
+  // GRACEFUL DEGRADATION
+  // This involves providing a modern experience for modern browsers, and a simpler experience for older browsers
+  // As an example, the background-filter only works in safari
+  // we can use @supports to ask the browser if it supports a certain property
+  // and if it does support the property, to apply certain styles:
+  @supports (-webkit-background-filter: blur(10px)) or
+    (background-filter: blur(10px)) {
+    background-color: rgba($color-black, 0.3);
+    -webkit-background-filter: blur(10px);
+    background-filter: blur(10px);
+  }
+  // caniuse.com - can query whether properties are supported on particular browsers here
+
+  // PREFIXES
+  // the following prefixes allow you to use the newest or experimental CSS features which are not yet formally supported in the specification / web browsers:
+  //- Safari: -webkit-
+  //- Chrome: -webkit-
+  //- Internet Explorer: -ms-
+  //- Opera: -o-
+  //- Firefox: -moz-
+  //- Android: -webkit-
+  //- iOS: -webkit-
+
   // open states
   &:target {
     opacity: 1;
