--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -488,7 +488,7 @@ html {
       font-size: 75%; } }
 
 ::selection {
-  background-color: #55c57a;
+  background-color: #406efd;
   color: #fff; }
 
 @keyframes moveInLeft {
@@ -552,7 +552,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-image: linear-gradient(to right, #2998ff, #5643fa);
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 2px;
@@ -606,7 +606,7 @@ body {
 
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero-small.jpg");
+  background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8)), url("../img/london/london-hero-2.jpeg");
   background-size: cover;
   background-position: top;
   position: relative;
@@ -625,7 +625,7 @@ body {
       height: 95vh; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (min-width: 125em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg"); } }
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8)), url("../img/hero.jpg"); } }
   @media only screen and (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
@@ -635,7 +635,7 @@ body {
     top: 4rem;
     left: 4rem; }
   .header__logo {
-    height: 3.5rem; }
+    height: 10rem; }
   .header__text-box {
     text-align: center;
     position: absolute;
@@ -721,7 +721,7 @@ body {
     display: inline-block;
     transition: all 0.3s; }
   .footer__link:hover, .footer__link:active {
-    color: #55c57a;
+    color: #406efd;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     transform: rotate(5deg) scale(1.3); }
   .footer__copyright {
@@ -766,7 +766,7 @@ body {
   position: fixed;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#7ed56f, #28b485);
+  background-image: radial-gradient(#2998ff, #5643fa);
   z-index: 1000;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   transition: transform 0.8s; }
@@ -788,7 +788,7 @@ body {
   opacity: 0;
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  background-image: linear-gradient(to top right, #28b485, #7ed56f); }
+  background-image: linear-gradient(to top right, #5643fa, #2998ff); }
 
 .navigation__list {
   position: absolute;
@@ -816,7 +816,7 @@ body {
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
-  color: #55c57a;
+  color: #406efd;
   transform: translateX(3rem); }
 
 .navigation__checkbox:checked ~ .navigation__background {
@@ -887,10 +887,10 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
 
 .btn--primary {
-  background-color: #55c57a;
+  background-color: #406efd;
   color: #f7f7f7; }
   .btn--primary::after {
-    background-color: #55c57a; }
+    background-color: #406efd; }
 
 .btn--white {
   background-color: #fff;
@@ -912,15 +912,15 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
-  color: #55c57a;
+  color: #406efd;
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid #55c57a;
+  border-bottom: 1px solid #406efd;
   padding: 3px;
   transition: all 0.2s; }
 
 .btn-text:hover {
-  background-color: #55c57a;
+  background-color: #406efd;
   color: #fff;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); }
@@ -971,7 +971,7 @@ body {
           top: 0;
           transform: scale(1.1); } }
     .composition__photo:hover {
-      outline: 1.5rem solid #55c57a;
+      outline: 1.5rem solid #406efd;
       outline-offset: 2rem;
       transform: scale(1.2) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
@@ -994,7 +994,7 @@ body {
     font-size: 6rem;
     margin-bottom: 0.5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    background-image: linear-gradient(to right, #2998ff, #5643fa);
     -webkit-background-clip: text;
     color: transparent; }
     @media only screen and (max-width: 56.25em) {
@@ -1026,11 +1026,11 @@ body {
     .card__side--back {
       transform: rotateY(180deg); }
       .card__side--back-1 {
-        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
-      .card__side--back-2 {
         background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
-      .card__side--back-3 {
+      .card__side--back-2 {
         background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -1042,11 +1042,11 @@ body {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
     .card__picture--1 {
-      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/london/london-eye-1.jpeg); }
     .card__picture--2 {
-      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/nat-6.jpg); }
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/london/big-ben-1.jpeg); }
     .card__picture--3 {
-      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg); }
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/london/london-theatre-1.jpeg); }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -1062,11 +1062,11 @@ body {
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone; }
     .card__heading-span--1 {
-      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)); }
-    .card__heading-span--2 {
       background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)); }
-    .card__heading-span--3 {
+    .card__heading-span--2 {
       background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)); }
   .card__details {
     padding: 3rem; }
     .card__details ul {
@@ -1094,6 +1094,8 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
+  .card__price-adjunct {
+    font-size: 2rem; }
   @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     .card {
       height: auto;
@@ -1224,7 +1226,7 @@ body {
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-    border-bottom: 3px solid #55c57a; }
+    border-bottom: 3px solid #406efd; }
   .form__input:focus:invalid {
     border-bottom: 3px solid #ff7730; }
   .form__input::-webkit-input-placeholder {
@@ -1263,7 +1265,7 @@ body {
 .form__radio-button {
   height: 3rem;
   width: 3rem;
-  border: 5px solid #55c57a;
+  border: 5px solid #406efd;
   border-radius: 50%;
   display: inline-block;
   position: absolute;
@@ -1279,7 +1281,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #55c57a;
+    background-color: #406efd;
     opacity: 0;
     transition: opacity 0.2s; }
 
@@ -1319,7 +1321,7 @@ body {
     transition: all 0.2s;
     line-height: 1; }
   .popup__close:hover {
-    color: #55c57a; }
+    color: #406efd; }
   .popup__content {
     width: 75%;
     background-color: #fff;
@@ -1361,6 +1363,17 @@ body {
     -webkit-hyphens: auto;
     hyphens: auto; }
 
+@media only screen and (max-width: 37.5em) {
+  .popup__left {
+    width: 0; }
+  .popup__right {
+    width: 100%; }
+  .popup__text {
+    font-size: 1rem; } }
+  @media only screen and (max-width: 37.5em) and (max-width: 350px) {
+    .popup__text {
+      font-size: 0.6rem; } }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -1371,7 +1384,7 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
+  background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8)), url("../img/london/london-hero-3.jpeg");
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem; }
@@ -1398,10 +1411,10 @@ body {
 
 .section-book {
   padding: 15rem 0;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/london/london-hero-1.jpeg);
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.15); }
