--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -34,7 +34,7 @@
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)
       ),
-      url("../img/hero.jpg");
+      url("../img/london/london-hero-2.jpeg");
   }
 
   @include respond(phone) {
