--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1414,7 +1414,7 @@ body {
   background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/london/london-hero-1.jpeg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../img/London/london-hero-1.jpeg");
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.15); }
